# gke-standard-cluster

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  TODO.md  config.yaml  deploy_service_account_CICD.sh  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.devcontainer/: devcontainer.json
.github/workflows/: cleanup.yml  docs.yml  main.yml
api/: app.py
api/docs/: ingest_delta.py  openapi_docs_model.py
api/models/: events.py
api/routers/: ingest_delta.py
api/temporal_workflows/: client.py
api/temporal_workflows/hello/: worker.py  workflow.py  your_activities_dacx.py  your_dataobject_dacx.py
api/utils/: config.py  secrets.py
configuration-sync/: index.html
docs/: configuration-sync.md  index.md  infrastructure.md  kubernetes.md
infra/helm/: Chart.yaml  README.md  values.yaml
infra/helm/templates/: BackendConfig.yaml  Deployment.yaml  DeploymentClient.yaml  DeploymentWorker.yaml  FrontendConfig.yaml  HorizontalPodAutoscaler.yaml  Ingress.yaml  ManagedCertificate.yaml  NOTES.txt  PersitentClaimVolume.yaml  Service.yaml  ServiceAccount.yaml
infra/k8s/: BackendConfig.yaml  Deployment.yaml  FrontendConfig.yaml  HorizontalPodAutoscaler.yaml  Ingress.yaml  PersitentClaimVolume.yaml  Service.yaml
infra/terraform/: README.md  k8s-cluster.tf  providers.tf  variables.tf
infra/terraform/backend/: dev.gcs.backend  local.gcs.backend  main.gcs.backend  prod.gcs.backend
infra/terraform/modules/artifactory/: README.md  main.tf  outputs.tf  variables.tf
infra/terraform/modules/cloud-dns/: README.md  main.tf  outputs.tf  variables.tf
infra/terraform/modules/cloud-domains/: README.md  main.tf  variables.tf
infra/terraform/modules/eventarc/: README.md  main.tf  outputs.tf  variables.tf
infra/terraform/modules/gke-cluster/: README.md  main.tf  varibles.tf
infra/terraform/modules/google-api/: README.md  main.tf
infra/terraform/modules/monitoring/: README.md  main.tf  variables.tf
infra/terraform/modules/network/: README.md  main.tf  outputs.tf  variables.tf
infra/terraform/modules/pubsub/: README.md  main.tf  outputs.tf  variables.tf
infra/terraform/modules/security/: README.md  main.tf  outputs.tf  variables.tf
infra/terraform/modules/service-accounts/: README.md  main.tf  outputs.tf  variables.tf
infra/terraform/tfvars/: dev.tfvars  local.tfvars  main.tfvars
infrastructure/: index.html
kubernetes/: index.html
scripts/: import_eventarc_triggers.sh  locustfile.py  publish_event.py  read_delta_table.py
scripts/request/: read_deltalake.sql
search/: search_index.json
